# energy-bidding-competition-ui

./: README.md  pyproject.toml
hack_ui/: app.py
hack_ui/assets/: style.css
